



########### install files ###############

install( FILES calibrate.png kuickshow-day.jpg kuickshow-night.jpg logo.png  	imageviewer-medium.png imageviewer-small.png handcursor.png  	ksslide.png about.png  DESTINATION  ${DATA_INSTALL_DIR}/kuickshow/pics )




#original Makefile.am contents follow:

## Add all of your pixmaps here
#pics_DATA = calibrate.png kuickshow-day.jpg kuickshow-night.jpg logo.png \
#	imageviewer-medium.png imageviewer-small.png handcursor.png \
#	ksslide.png about.png
#
## This is where it will all be installed
#picsdir = $(kde_datadir)/kuickshow/pics
